--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "lucide-react": "^0.523.0",
     "nanoid": "^3.3.11",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5",
     "zustand": "^5.0.6",
