--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.1.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.523.0",
     "nanoid": "^3.3.11",
     "next": "15.3.4",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/date-fns": "^2.5.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
