--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.523.0",
     "nanoid": "^3.3.11",
     "next": "15.3.4",
@@ -45,6 +46,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/date-fns": "^2.5.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
