--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nanoid": "^3.3.11",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
